--- a/WebApplication1/wwwroot/index.html
+++ b/WebApplication1/wwwroot/index.html
@@ -144,7 +144,7 @@
                                 <div class="col-xl-8 col-lg-9">
                                     <!-- Hero Caption -->
                                     <div class="hero__caption">
-                                        <h1>fashion<br>changing<br>always</h1>
+                                        <h1>It's<br>Ice-Cream<br>Time</h1>
                                         <a href="shop.html" class="btn">Shop Now</a>
                                     </div>
                                 </div>
@@ -158,7 +158,7 @@
                                 <div class="col-xl-8 col-lg-9">
                                     <!-- Hero Caption -->
                                     <div class="hero__caption">
-                                        <h1>fashion<br>changing<br>always</h1>
+                                        <h1>It's<br>Ice-Cream<br>Time</h1>
                                         <a href="shop.html" class="btn">Shop Now</a>
                                     </div>
                                 </div>
@@ -172,7 +172,7 @@
                                 <div class="col-xl-8 col-lg-9">
                                     <!-- Hero Caption -->
                                     <div class="hero__caption">
-                                        <h1>fashion<br>changing<br>always</h1>
+                                        <h1>It's<br>Ice-Cream<br>Time</h1>
                                         <a href="shop.html" class="btn">Shop Now</a>
                                     </div>
                                 </div>
@@ -190,9 +190,9 @@
                     <div class="col-lg-3 col-md-6 col-sm-6">
                         <div class="single-popular-items mb-50 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".1s">
                             <div class="popular-img">
-                                <img src="assets/img/gallery/popular1.png" alt="">
+                                <img src="../img/NewFolder/NewFolder1/erwan-hesry-kwrOLRHjxZc-unsplash.jpg" alt="">
                                 <div class="img-cap">
-                                    <span>Glasses</span>
+                                    <span>All</span>
                                 </div>
                                 <div class="favorit-items">
                                  <a href="shop.html" class="btn">Shop Now</a>
@@ -203,9 +203,9 @@
                  <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="single-popular-items mb-50 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".2s">
                         <div class="popular-img">
-                            <img src="assets/img/gallery/popular2.png" alt="">
+                            <img src=../img/NewFolder/NewFolder1/leighann-blackwood--cQ2kQqpEB8-unsplash.jpg alt="">
                             <div class="img-cap">
-                                <span>Watches</span>
+                                <span>Cream</span>
                             </div>
                             <div class="favorit-items">
                              <a href="shop.html" class="btn">Shop Now</a>
@@ -216,9 +216,9 @@
              <div class="col-lg-3 col-md-6 col-sm-6">
                 <div class="single-popular-items mb-50 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".4s">
                     <div class="popular-img">
-                        <img src="assets/img/gallery/popular3.png" alt="">
+                        <img src=../img/NewFolder/NewFolder1/donna-g-MmZjbhO0i7c-unsplash.jpg alt="">
                         <div class="img-cap">
-                            <span>Jackets</span>
+                            <span>Sorbet</span>
                         </div>
                         <div class="favorit-items">
                          <a href="shop.html" class="btn">Shop Now</a>
@@ -229,9 +229,9 @@
          <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="single-popular-items mb-50 text-center wow fadeInUp" data-wow-duration="1s" data-wow-delay=".6s">
                 <div class="popular-img">
-                    <img src="assets/img/gallery/popular4.png" alt="">
+                    <img src=../img/NewFolder/NewFolder1/michel-stockman-_xZXKYDYQGE-unsplash.jpg alt="">
                     <div class="img-cap">
-                        <span>Clothes</span>
+                        <span>Sugar-Free</span>
                     </div>
                     <div class="favorit-items">
                      <a href="shop.html" class="btn">Shop Now</a>
