--- a/WebApplication1/wwwroot/about.html
+++ b/WebApplication1/wwwroot/about.html
@@ -129,7 +129,13 @@
                     <div class="col-lg-10">
                         <div class="section-tittle mb-60 text-center pt-10">
                             <h2>Our Story</h2>
-                            <p class="pera">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+                            <pre class="pera">
+                                Zelda - the first Hebrew ice cream parlor chain in Israel, was established in 2012 and is owned by the Anita Group.
+                                The story of the Anita Group began in the home kitchen of Anita's mother, who was known in the neighborhood for making homemade jams and special pastries, which over the years were integrated into the house flavors of the chain's iconic ice creams. Nir, the younger brother, created the ice cream flavors very carefully and even continued to develop unique flavors and products, until in 2002, together with his brother Adi, he opened the first boutique ice cream parlor in the Neve Tzedek neighborhood in Tel Aviv, which over the years became an international chain of ice cream parlors with about 20 branches in Israel and around the world.
+                                Thus was born - "Zelda" - an Israeli ice cream chain from the Anita group, which has about 130 branches nationwide, starting from Kiryat Shmona and ending in Eilat.
+                                Zelda offers an exciting experience of wonderful and unique flavors, using high-quality raw materials produced at the Anita factory in Kfar Vitkin.
+                                The factory is the only one in Israel that specializes in the production of raw materials for preparation in all chain stores. This is how we enable our customers to enjoy the flavors, quality, freshness and family warmth of the Anita Group.
+                            </pre>
                         </div>
                     </div>
                     <div class="col-lg-12">
