--- a/WebApplication1/wwwroot/index.html
+++ b/WebApplication1/wwwroot/index.html
@@ -250,7 +250,7 @@
         <div class="row justify-content-center">
             <div class="col-xl-7 col-lg-8 col-md-10">
                 <div class="section-tittle mb-60 text-center wow fadeInUp" data-wow-duration="2s" data-wow-delay=".2s">
-                    <h2>new<br>arrival</h2>
+                    <h2>especially<br>for today</h2>
                 </div>
             </div>
         </div>
